apps/billing-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  labels:
    app: billing-service
spec:
  selector:
    app: billing-service
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
